--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,7 @@
 @import "open-props/postcss/buttons";
 
 @font-face {
+  font-display: auto;
   font-family: icon;
   src: url(./fonts/la-solid-900.woff2);
 }
