--- a/src/global.css
+++ b/src/global.css
@@ -43,7 +43,7 @@ body {
 }
 
 main {
-  grid-area:main;
+  grid-area: main;
   display: flex;
   flex-direction: column;
 }
@@ -62,12 +62,22 @@ body>header {
 }
 
 body>footer {
-  grid-area: footer;
-  bottom: 0;
-  position: sticky;
+  top: 0;
+  position: absolute;
   width: 100vw;
+  max-height: var(--bottom-nav-height);
   z-index: var(--layer-4);
-  background: var(--surface-0);
+  background: red;
   box-shadow: var(--shadow-2);
   border-top: 1px solid var(--surface-3);
+  transform: translateY(calc((var(--page-height) - var(--bottom-nav-height)) + (var(--scroll-amount) * 1px)));
+  transition: max-height .25s ease-in-out, opacity .25s ease-in-out;
+  opacity: 1;
+}
+
+html:not([data-scroll-speed="0"]) body>footer {
+  max-height: 0;
+  opacity: 0;
+  transition: none;
+
 }
