--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,4 +1,4 @@
-content {
+.content {
   grid-column: var(--content-column);
   grid-row: var(--content-row);
   background: orange;
@@ -6,7 +6,7 @@ content {
 
 
 @media (--xs-n-above) {
-  content {
+  .content {
     --content-column: var(--xs-column);
     --content-row: var(--xs-row);
   }
@@ -14,7 +14,7 @@ content {
 
 @media (--sm-n-above) {
 
-  content {
+  .content {
     --content-column: var(--sm-column);
     --content-row: var(--sm-row);
   }
@@ -22,7 +22,7 @@ content {
 
 @media (--md-n-above) {
 
-  content {
+  .content {
     --content-column: var(--md-column);
     --content-row: var(--md-row);
   }
@@ -30,14 +30,14 @@ content {
 
 @media (--lg-n-above) {
 
-  content {
+  .content {
     --content-column: var(--lg-column);
     --content-row: var(--lg-row);
   }
 }
 
 @media (--xl-n-above) {
-  content {
+  .content {
     --content-column: var(--xl-column);
     --content-row: var(--xl-row);
   }
@@ -45,7 +45,7 @@ content {
 
 @media (--xxl-n-above) {
 
-  content {
+  .content {
     --content-column: var(--xxl-column);
     --content-row: var(--xxl-row);
   }
