--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,7 @@
- @import "open-props/postcss/style";
+/*  @import "open-props/postcss/style";
  @import "open-props/postcss/normalize";
  @import "open-props/postcss/buttons";
- 
+  */
  @import "../src/styles/media-queries.css";
  @import "../src/styles/page.css";
  @import "../src/styles/brand.css";
