--- a/src/components/section/section.css
+++ b/src/components/section/section.css
@@ -1,5 +1,3 @@
-
-
 section {
   display: flex;
   position: relative;
@@ -20,13 +18,14 @@ section {
       content: "";
       grid-column: col 1 / span 12;
       grid-row: row 1 / -2;
-      border:dashed 1px gray;
+      border: dashed 1px gray;
     }
+
     &:after {
       content: "";
       grid-column: 1 / -1;
       grid-row: 1 / -1;
-      border:dashed 1px gray;
+      border: dashed 1px gray;
     }
 
   }
@@ -61,7 +60,10 @@ section {
     --page-grid-gutter-y: 1rem;
     --page-grid-gutter-x: 1rem;
     --page-grid-gap: 0.5rem;
-    --page-grid-rows: 5;
+  }
+
+  section {
+    --page-grid-rows: var(--xs-rows);
   }
 }
 
@@ -70,7 +72,10 @@ section {
     --page-grid-gutter-y: 1vh;
     --page-grid-gutter-x: 2.5vw;
     --page-grid-gap: 0.5rem;
-    --page-grid-rows: 5;
+  }
+
+  section {
+    --page-grid-rows: var(--sm-rows, var(--xs-rows));
   }
 }
 
@@ -79,7 +84,10 @@ section {
     --page-grid-gutter-y: 1vh;
     --page-grid-gutter-x: 5vw;
     --page-grid-gap: 0.5rem;
-    --page-grid-rows: 5;
+  }
+
+  section {
+    --page-grid-rows: var(--md-rows, var(--sm-rows, var(--xs-rows)));
   }
 }
 
@@ -88,24 +96,33 @@ section {
     --page-grid-gutter-y: 1vh;
     --page-grid-gutter-x: 7.5vw;
     --page-grid-gap: 0.5rem;
-    --page-grid-rows: 5;
+  }
+
+  section {
+    --page-grid-rows: var(--lg-rows, var(--md-rows, var(--sm-rows, var(--xs-rows))));
   }
 }
 
 @media (min-width: 1440px) {
   :root {
     --page-grid-gutter-y: 1vh;
-    --page-grid-gutter-x: calc((100vh - 1440) / 2);
+    --page-grid-gutter-x: calc((100vw - 1440px) / 2);
     --page-grid-gap: 0.5rem;
-    --page-grid-rows: 5;
+  }
+
+  section {
+    --page-grid-rows: var(--xl-rows, var(--lg-rows, var(--md-rows, var(--sm-rows, var(--xs-rows)))));
   }
 }
 
 @media (min-width: 1920px) {
   :root {
     --page-grid-gutter-y: 1vh;
-    --page-grid-gutter-x: calc((100vh - 1440) / 2);
+    --page-grid-gutter-x: calc((100vh - 1600px) / 2);
     --page-grid-gap: 0.5rem;
-    --page-grid-rows: 5;
+  }
+
+  section {
+    --page-grid-rows: var(--xxl-rows, var(--xl-rows, var(--lg-rows, var(--md-rows, var(--sm-rows, var(--xs-rows))))));
   }
 }
