--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,14 @@
     src: url("./fonts/Inter-roman.var.woff2") format("woff2");
   }
 
+  @font-face {
+    font-family: 'Icons';
+    font-style: normal;
+    font-weight: 900;
+    font-display: auto;
+    src: url("./icons/la-solid-900.woff2") format("woff2");
+  }
+
 
 
   :root {
@@ -24,6 +32,7 @@
   }
 
   html {
+    font-family: 'Inter';
     width: var(--page-width);
     height: var(--page-height);
   }
