--- a/src/components/section/section.css
+++ b/src/components/section/section.css
@@ -1,7 +1,11 @@
 section {
   display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   width: 100vw;
+  content-visibility: auto;
+  contain-intrinsic-size: 100vw calc(var(--page-grid-rows) * max(70px, calc(10vh - var(--page-grid-gap))));
   --page-grid-template-columns: [left-gutter] var(--page-grid-gutter-x) [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col right-gutter] var(--page-grid-gutter-x);
   --page-grid--template-rows: [top-gutter] var(--page-grid-gutter-y) repeat(var(--page-grid-rows), [row] minmax(70px, calc(10vh - var(--page-grid-gap)))) [bottom-gutter] var(--page-grid-gutter-y);
 
@@ -32,10 +36,8 @@ section {
 
   &>.sentinel-wrapper {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 0px;
     z-index: -999;
     display: flex;
     justify-content: center;
