--- a/src/global.css
+++ b/src/global.css
@@ -1,59 +1,59 @@
-  @import "open-props/postcss/style";
-  @import "open-props/postcss/normalize";
-  @import "open-props/postcss/buttons";
-  @import "../src/styles/page.css";
-  @import "../src/styles/brand.css";
+@import "open-props/style";
+@import "open-props/normalize";
+@import "open-props/buttons";
+@import "../src/styles/page.css";
+@import "../src/styles/brand.css";
 
 
-  @font-face {
-    font-family: 'Inter';
-    font-weight: 100 900;
-    font-display: swap;
-    font-style: normal;
-    font-named-instance: 'Regular';
-    src: url("./fonts/Inter-roman.var.woff2") format("woff2");
-  }
+@font-face {
+  font-family: 'Inter';
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  src: url("./fonts/Inter-roman.var.woff2") format("woff2");
+}
 
-  @font-face {
-    font-family: 'Icons';
-    font-style: normal;
-    font-weight: 900;
-    font-display: auto;
-    src: url("./icons/la-solid-900.woff2") format("woff2");
-  }
+@font-face {
+  font-family: 'Icons';
+  font-style: normal;
+  font-weight: 900;
+  font-display: auto;
+  src: url("./icons/la-solid-900.woff2") format("woff2");
+}
 
 
 
-  :root {
-    --page-width: 100vw;
-    --page-height: 100vh;
-    --top-nav-height: 64px;
-    --bottom-nav-height: 64px;
-  }
+:root {
+  --page-width: 100vw;
+  --page-height: 100vh;
+  --top-nav-height: 64px;
+  --bottom-nav-height: 64px;
+}
 
-  html {
-    font-family: 'Inter';
-    width: var(--page-width);
-    height: var(--page-height);
-  }
+html {
+  font-family: 'Inter';
+  width: var(--page-width);
+  height: var(--page-height);
+}
 
-  body {
-    display: grid;
-    width: var(--page-width);
-    grid-template-columns: 1fr;
-    grid-template-rows:
-      var(--top-nav-height) auto var(--bottom-nav-height);
-    grid-template-areas:
-      "header"
-      "main"
-      "footer";
-    margin: 0;
-    position: relative;
-    padding: 0;
-  }
+body {
+  display: grid;
+  width: var(--page-width);
+  grid-template-columns: 1fr;
+  grid-template-rows:
+    var(--top-nav-height) auto var(--bottom-nav-height);
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
+  margin: 0;
+  position: relative;
+  padding: 0;
+}
 
-  main {
-    grid-area: main;
-    display: flex;
-    flex-direction: column;
-  }
+main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+}
