--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,12 +1,28 @@
 .content {
   grid-column: var(--content-column);
   grid-row: var(--content-row);
-  background: orange;
   z-index: var(--layer-1);
+
 }
 
-.content > * {
+.content>* {
   z-index: var(--layer-2);
+}
+
+
+.editing .content {
+  &:empty {
+    border: 2px dashed red;
+
+    &:before {
+      content: 'Empty Content Block';
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      line-height: 100%;
+      color: red;
+    }
+  }
 }
 
 @media (min-width: 240px) {
