--- a/src/components/section/section.css
+++ b/src/components/section/section.css
@@ -16,20 +16,6 @@ section {
     padding: calc(var(--page-grid-gap) / 2) 0;
     width: 100vw;
 
-    &:before {
-      content: "";
-      grid-column: col 1 / span 12;
-      grid-row: row 1 / -2;
-      border: dashed 1px gray;
-    }
-
-    &:after {
-      content: "";
-      grid-column: 1 / -1;
-      grid-row: 1 / -1;
-      border: dashed 1px gray;
-    }
-
   }
 
   &>.sentinel-wrapper {
@@ -59,6 +45,23 @@ section {
   }
 
 
+}
+
+
+.editing section .section-content {
+  &:before {
+    content: "";
+    grid-column: col 1 / span 12;
+    grid-row: row 1 / -2;
+    border: dashed 1px gray;
+  }
+
+  &:after {
+    content: "";
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    border: dashed 1px gray;
+  }
 }
 
 
