--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -18,6 +18,7 @@ article {
 
 [carousel] {
   width: var(--carousel-wrapper-width, 100%);
+  height:100%;
   background: inherit;
   display: flex;
   align-items: center;
@@ -34,6 +35,7 @@ article {
   align-items: center;
   overflow-x: scroll;
   width: var(--carousel-wrapper-width);
+  height:inherit;
   gap: var(--carousel-gap);
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -55,14 +57,15 @@ article {
 [carousel] ul>li {
   position: relative;
   scroll-snap-align: start;
+  height:inherit;
   display: flex;
   flex: 0 0 auto;
   scroll-margin: 0 calc(var(--carousel-gap) * 2);
   padding: 0;
-  min-width: var(--min-width);
-  min-height: var(--min-height);
+  min-width: var(--min-width);;
   max-width: unset;
   transition: all .25s var(--ease-elastic-1);
+  background-color: red;
 }
 
  [carousel] ul>li:empty {
@@ -98,8 +101,8 @@ article {
   right: calc(var(--carousel-gap) * .25);
 }
 
-[carousel]:has([data-visible*="true"]:first-child)>button:first-child,
-[carousel]:has([data-visible*="true"]:last-child)>button:last-child {
+[carousel]:has([data-visible*="true"]:first-of-type)>button:first-child,
+[carousel]:has([data-visible*="true"]:last-of-type)>button:last-child {
   width: 0;
   opacity: 0;
   pointer-events: none;
@@ -113,3 +116,5 @@ article {
 [is="carousel-list-item"][data-invisible="true"]>* {
   content-visibility: hidden;
 }
+
+/* open props and default size then tabs  */ 
