--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,10 +1,15 @@
 .content {
   grid-column: var(--content-column);
   grid-row: var(--content-row);
-  position:relative;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: inherit;
 
-  &> *{
-    position:relative;
+  &>* {
+    position: relative;
   }
 }
 
@@ -13,9 +18,6 @@
 .editing .content {
   &:empty {
     border: 2px dashed red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     &:before {
       content: 'Empty Content Block';
